shop (bugfix): fixed layout issue with mandatory products options
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@24205 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/themes/standard_3_0/modules.css
+++ b/themes/standard_3_0/modules.css
@@ -1380,6 +1380,9 @@ div.row2 {
     background-color: red;
     background-image: url("images/logo.png");
 }
+#shop label.error {
+    float: none;
+}
 #shop div.order table {
     float: left;
     width: 100%;
@@ -2613,3 +2616,4 @@ dl.data_module img {
 #deployJavaPlugin {
     display: none;
 }
+
