--- a/update/updates/3.0.3/data/standard.css
+++ b/update/updates/3.0.3/data/standard.css
@@ -1402,6 +1402,9 @@ div.row2 {
     background-color: red;
     background-image: url("images/logo.png");
 }
+#shop label.error {
+    float: none;
+}
 #shop div.order table {
     float: left;
     width: 100%;
